--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ author: Jiayao;
 Typography
 ========================================
 */
+
 h1, h3, h4, h5, p {
 	/*margin-bottom: 22px;*/
 }
@@ -31,7 +32,7 @@ h1, h3, h4, h5, p {
 	display: inline-block;
 	/*text-align: left;*/
 	/*border: solid;*/
-	width: 30px;
+	width: 50px;
 	border-radius: 10px;
 	padding-left: 5px;
 	padding-right: 5px;
@@ -52,13 +53,30 @@ body {
 	/*padding: 5px;*/
 	/*background-color: skyblue;*/
 }
-
 h1 {
 	font-family: Georgia;
 	font-size: 30px;
 	/*border: solid;*/
 	margin-top: 0px;
 }
+h2 {
+	margin-bottom: 10px;
+}
+h3 {
+	margin-bottom: 5px;
+}
+p {
+}
+section {
+	/*border: solid;*/
+	/*---whether change the global font---*/
+	/* "Segoe UI" */
+	font-family: calibri;
+}
+/*p {
+	font: italic small-caps bold 14px/22px "Helvetica Neue",Helvetica, Arial, sans-serif;
+}*/
+
 .welcome {
 	/*background: #466368;*/
 	margin: 0px;
@@ -75,14 +93,6 @@ h1 {
 	font-size: 12px;
 }
 
-/*p {
-	background: orange;
-	font-size: 24px;
-	font-family: Helvetica;
-}*/
-section {
-	/*border: solid;*/
-}
 
 a {
 	text-decoration: none;
@@ -90,32 +100,53 @@ a {
 }
 a:hover {
 	color: tomato;
+	/*font-size: 30px;*/
+}
+a.hovernone:hover {
+	color: black;
 }
 
 .p-para {
 	text-indent: 2em;
-
+	/*padding-left: 10px;
+	padding-right: 10px;*/
 }
 
 .col {
 	padding: 50px;
 	padding-left: 60px;
+	padding-top: 20px;
 	/*border: solid gray;*/
 }
-.col-1-2 {
+.intro-box {
 	/*display: inline-block;*/
 	margin-top: 10px;
 	/*width: 80%;*/
 	/*width: 45%;*/
 	border: 1px solid rgb(205,205,205);
 	border-left: 6px solid rgb(205,205,205,0.8);
+	padding-left: 15px;
+	padding-right: 15px;
 }
-.col-1-2:hover{
+.intro-box:hover{
 	background-color: tomato;
 	color: white;
 }
 
+.column {
+	display: inline-block;
+	/*border: solid;*/
+	vertical-align: top;
+	/*max-width: 520px;*/
+}
 
+.cv-time {
+	width: 80px;
+	color: dimgray;
+}
+.cv-edu {
+	max-width: 520px; /* this is for short and long screen! */
+}
 
 
 /*
@@ -150,4 +181,9 @@ other pages
 .para-content {
 	padding-left: 10px;
 	padding-right: 10px;
+}
+
+.p-compact {
+	margin-top: 4px;
+	/* the paragraph after h3 */
 }
