--- a/style.css
+++ b/style.css
@@ -17,10 +17,11 @@ h1, h3, h4, h5, p {
 	padding: 5px;
 	line-height: 30px;
 	padding-left: 0px;
-	display: inline-block;
-	width: 99%;
+	/*display: inline-block;*/
+	max-width: 800px;
 	/*border: solid;*/
 	/*box-shadow:0px 0px 5px gray;*/
+	margin: 0 auto;
 }
 .nav-ele {
 	padding: 5px;
@@ -30,7 +31,7 @@ h1, h3, h4, h5, p {
 .nav-logo {
 	font-family: Georgia;
 	display: inline-block;
-	/*text-align: left;*/
+	text-align: center;
 	/*border: solid;*/
 	width: 50px;
 	border-radius: 10px;
@@ -42,9 +43,11 @@ h1, h3, h4, h5, p {
 	color: white;
 }
 .nav-right {
+	text-align: center;
 	display: inline-block;
-	width: 90%;
-
+	max-width: 700px;
+	padding-left: 5px;
+	padding-right: 5px;
 	/*border: solid;*/
 }
 
@@ -55,15 +58,20 @@ body {
 }
 h1 {
 	font-family: Georgia;
-	font-size: 30px;
+	font-size: 26px;
 	/*border: solid;*/
 	margin-top: 0px;
 }
+h2, h3, h4, h5 {
+	padding-left: 2px;
+}
 h2 {
 	margin-bottom: 10px;
+	font-size: 22px;
 }
 h3 {
 	margin-bottom: 5px;
+	font-size: 18px;
 }
 p {
 }
@@ -71,7 +79,8 @@ section {
 	/*border: solid;*/
 	/*---whether change the global font---*/
 	/* "Segoe UI" */
-	font-family: calibri;
+	/**/
+	font-family: Calibri,"Segoe UI","Times New Roman";
 }
 /*p {
 	font: italic small-caps bold 14px/22px "Helvetica Neue",Helvetica, Arial, sans-serif;
@@ -82,7 +91,7 @@ section {
 	margin: 0px;
 	/*border: solid #949599;*/
 	padding: 50px;
-	padding-left: 70px;
+	padding-left: 30px;
 	padding-bottom: 30px;
 	background: #648880;
 	background: linear-gradient(to right, #f6f1d3, tomato);
@@ -91,6 +100,9 @@ section {
 	color: tomato;
 	text-transform: uppercase;
 	font-size: 12px;
+}
+.welcome-title {
+	font-size: 30px;
 }
 
 
@@ -174,7 +186,7 @@ other pages
 */
 .paragraph {
 	margin: 0 6px 0px 0;
-	padding-left: 50px;
+	padding-left: 40px;
 	padding-top: 20px;
 
 }
@@ -186,4 +198,5 @@ other pages
 .p-compact {
 	margin-top: 4px;
 	/* the paragraph after h3 */
+	margin-bottom: 6px;
 }
