--- a/style.css
+++ b/style.css
@@ -246,7 +246,9 @@ other pages
 .paragraph {
 	margin: 0 6px 0px 0;
 	padding-left: 40px;
+	padding-left: 20px;
 	padding-top: 20px;
+	padding-right: 10px;
 
 }
 .para-content {
